<resources>
    <string name="app_name">LayOut1-1</string>
    <string name="str1">Open...</string>
    <string name="str2">Save...</string>
    <string name="str3">Save As...</string>
    <string name="str5">X Import...</string>
    <string name="str6">X Export...</string>
    <string name="str7">Quit...</string>
    <string name="str_ctrl_o">Ctrl-O</string>
    <string name="str_ctrl_s">Ctrl-S</string>
    <string name="str_ctrl_shift_s">Ctrl-Shift-S</string>
    <string name="str_ctrl_e">Ctrl-E</string>

</resources>
