<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:background="#242424"
    >

    <TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/str1"
            android:textColor="#fff" />

        <TextView
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/str_ctrl_o"
            android:textColor="#fff" />
    </TableRow>
    <TableRow
       >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/str2"
            android:padding="3dip"
            android:textColor="#fff"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="right"
            android:text="@string/str_ctrl_s"
            android:padding="3dip"
            android:textColor="#fff"
            />
    </TableRow>
    <TableRow

        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/str3"
            android:padding="3dip"
            android:textColor="#fff"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="right"
            android:text="@string/str_ctrl_shift_s"
            android:padding="3dip"
            android:textColor="#fff"

            />
    </TableRow>
    <TableRow android:background="#868586">
        <TextView
            android:text=""
            android:layout_height="1dp"
            />
    </TableRow>
    <TableRow
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/str5"
            android:textColor="#fff"
            android:padding="3dip"
            />
    </TableRow>
    <TableRow
        >
        <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/str6"
        android:padding="3dip" android:textColor="#fff"
        />
        <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="right"
        android:text="@string/str_ctrl_e"
        android:padding="3dip"
        android:textColor="#fff"
        />
    </TableRow>
    <TableRow android:background="#868586">
        <TextView
            android:text=""
            android:layout_height="1dp"
            />
    </TableRow>
    <TableRow
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/str7"
            android:padding="3dip"
            android:textColor="#fff"
            />
    </TableRow>

</TableLayout>
